--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
 .global-amperage, .reley, .sg90-servo, .garage-door, .laser-receiver,
 .laser, .window, .mg135-air, .pir, .rfid-rc522, .door, .air-pipe, .dht22, .peltye,
 .dht11, .sun-light, .white-led-strip, .rgb-led-strip, .light-sensor, .flower,
-.ventilation-recuperaptor
+.ventilation-recuperaptor, .en-lang, .ua-lang
 {
     display: block;
     position: relative;
@@ -49,7 +49,8 @@
 .arduino-nano-rs485-block, .wifi-ds18b20-block, .solar-panel-a-v-module,
 .raspberry-rs485-block, .global-a-v-block, .main-door-servo-block,
 .garage-input-block, .garage-door-block, .window-servo-pir-block, .servo-rfid-block,
-.door-s90-pir2-block, .ventilation-block, .lights-block
+.door-s90-pir2-block, .ventilation-block, .lights-block,
+.language-block
 {
     display: block;
     position: relative;
@@ -60,7 +61,7 @@
 .global-amperage:before, .reley:before, .sg90-servo:before, .garage-door:before, .laser-receiver:before,
 .laser:before, .window:before, .mg135-air:before, .pir:before, .rfid-rc522:before, .door:before, .air-pipe:before, .dht22:before, .peltye:before,
 .dht11:before, .sun-light:before, .white-led-strip:before, .rgb-led-strip:before, .light-sensor:before, .flower:before,
-.ventilation-recuperaptor:before
+.ventilation-recuperaptor:before, .en-lang:before, .ua-lang:before
 {
     content: "";
     position: absolute;
@@ -495,10 +496,10 @@
     left: -205%;
 }
 .ventilation-block .dht11-2{
-    top: 65%;
-    left: -44%;
-    width: 67%;
-    height: 62%;
+    top: 24%;
+    left: -14%;
+    width: 43%;
+    height: 42%;
     transform: rotate(90deg);
     -webkit-transform: rotate(90deg);
 }
@@ -778,4 +779,38 @@
 }
 .arduino-nano-rs485-block-8{
     top: -2%; left: 90%;
+}
+
+/*language buttons*/
+.language-block{
+    top: -131%;
+    left: 46%;
+    height: 4%;
+    width: 7%;
+}
+.en-lang, .ua-lang{
+    width: 50%;
+    height: 100%;
+} 
+.en-lang {
+    /* background: rgb(0, 255, 13); */
+    top: 0%;
+    left: 0%;
+}
+.ua-lang{
+    /* background: rgb(255, 72, 0); */
+    top: -100%;
+    left: 55%;
+}
+.en-lang:before{
+    width: 100%;
+    height: 100%;
+    background: url("images/en.jpg"); 
+    background-size: 100% 100%;
+}
+.ua-lang:before{
+    width: 100%;
+    height: 100%;
+    background: url("images/ua.gif"); 
+    background-size: 100% 100%;
 }
