--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
     width: 200px;
     /* height: 200px; */
     float: left;
+    margin: 0 10px 10px 0;
 }
 #img-description img{
     object-fit: cover;
