--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .schema-block {
-  background: rgb(233, 233, 233);
+  background: rgb(218, 221, 230);
   width: 700px;
   height: 450px;
   position: relative;
@@ -10,7 +10,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgb(233, 233, 233) url("images/layout.svg");
+  background: rgb(218, 221, 230) url("images/layout.svg");
   background-size: cover;
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -192,14 +192,14 @@
 }
 
 .sg90-servo {
-  background: blue;
+  /* background: blue; */
 }
-/* .sg90-servo:before{
-    width: 100%;
-    height: 100%;
-    background: rgb(255, 255, 159) url("images/scheme_images/sg90-servo.jpg"); 
-    background-size: 100% 100%;
-} */
+.sg90-servo:before {
+  width: 100%;
+  height: 100%;
+  background: url("images/scheme_images/sg90-servo.png");
+  background-size: 100% 100%;
+}
 
 .pir {
   /* background: rebeccapurple; */
@@ -212,14 +212,14 @@
 }
 
 .laser {
-  background: black;
+  /* background: black; */
 }
-/* .laser:before{
-    width: 100%;
-    height: 100%;
-    background: rgb(218, 132, 132) url("images/scheme_images/laser.png"); 
-    background-size: 100% 100%;
-} */
+.laser:before {
+  width: 100%;
+  height: 100%;
+  background: url("images/scheme_images/laser.png");
+  background-size: 100% 100%;
+}
 
 .window {
   background: tomato;
@@ -232,14 +232,14 @@
 }
 
 .laser-receiver {
-  background: rgb(233, 171, 79);
+  /* background: rgb(233, 171, 79); */
 }
-/* .laser-receiver:before{
-    width: 100%;
-    height: 100%;
-    background: url("images/scheme_images/laser-receiver.png"); 
-    background-size: 100% 100%;
-} */
+.laser-receiver:before {
+  width: 100%;
+  height: 100%;
+  background: url("images/scheme_images/laser-receiver.png");
+  background-size: 100% 100%;
+}
 
 .global-amperage {
   /* background: grey; */
@@ -360,14 +360,14 @@
 }
 
 .rfid-rc522 {
-  background: rgb(89, 129, 214);
+  /* background: rgb(89, 129, 214); */
 }
-/* .rfid-rc522:before{
-    width: 100%;
-    height: 100%;
-    background: indianred url("images/scheme_images/rfid-rc522.jpg"); 
-    background-size: 100% 100%;
-} */
+.rfid-rc522:before {
+  width: 100%;
+  height: 100%;
+  background: url("images/scheme_images/rfid-rc522.png");
+  background-size: 100% 100%;
+}
 
 .door {
   /* background: brown; */
@@ -390,7 +390,7 @@
 }
 
 .air-pipe {
-  background: blue;
+  /* background: blue; */
 }
 .air-pipe:before {
   width: 100%;
@@ -399,11 +399,14 @@
   background-size: 100% 100%;
 }
 .ventilation-recuperaptor {
-  background: rgb(167, 145, 145);
+  /* background: rgb(167, 145, 145); */
 }
-/* .ventilation-recuperaptor:before{
-
-} */
+.ventilation-recuperaptor:before{
+  width: 100%;
+  height: 100%;
+  background: url("images/scheme_images/recuperator.png");
+  background-size: 100% 100%;
+}
 .dht22 {
   /* background: wheat; */
 }
@@ -415,14 +418,14 @@
 }
 
 .peltye {
-  background: whitesmoke;
+  /* background: whitesmoke; */
 }
-/* .peltye:before{
-    width: 100%;
-    height: 100%;
-    background: fuchsia url("images/scheme_images/peltye.jpg"); 
-    background-size: 100% 100%;
-} */
+.peltye:before {
+  width: 100%;
+  height: 100%;
+  background: url("images/scheme_images/peltyer.png");
+  background-size: 100% 100%;
+}
 
 .dht11 {
   /* background: darkcyan; */
@@ -496,22 +499,22 @@
   left: 90%;
 }
 .lights-block .light-sensor {
-  width: 25%;
-  height: 20%;
+  width: 100%;
+  height: 100%;
 }
 .lights-block .light-sensor-1 {
   top: -107%;
-  left: 49%;
-  height: 30%;
-  width: 36%;
+  left: -10%;
+  height: 100%;
+  width: 100%;
 }
 .lights-block .light-sensor-2 {
-  transform: rotate(-90deg);
-  -webkit-transform: rotate(-90deg);
-  top: -200%;
-  left: 295%;
-  width: 40%;
-  height: 33%;
+  transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+  top: -330%;
+  left: 255%;
+  width: 110%;
+  height: 80%;
 }
 
 /* ventilation */
@@ -527,9 +530,12 @@
 }
 .ventilation-recuperaptor {
   width: 156%;
-  height: 24%;
-  top: -463%;
-  left: -200%;
+  height: 54%;
+  top: -483%;
+  left: -180%;
+  z-index: 10;
+  transform: rotate(-5deg);
+  /* -webkit-transform: rotate(-10deg); */
 }
 /* .air-pipe-1{
     width: 158%;
@@ -543,14 +549,14 @@
   -webkit-transform: rotate(-90deg);
 }
 .air-pipe-2 {
-  top: -212%;
+  top: -240%;
   left: -235%;
   width: 370%;
 }
 .air-pipe-3 {
   width: 284%;
   left: -58%;
-  top: 50%;
+  top: 10%;
 }
 .air-pipe-4 {
   width: 130%;
@@ -558,16 +564,21 @@
   top: -64%;
 }
 .dht22 {
-  width: 40%;
-  height: 30%;
+  width: 60%;
+  height: 50%;
   left: -51%;
   top: -412%;
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
 }
 .peltye {
-  width: 103%;
-  height: 10%;
-  top: -581%;
-  left: -180%;
+  width: 80%;
+  height: 130%;
+  top: -690%;
+  left: -250%;
+  z-index: 0;
+  transform: rotate(-33deg);
+  /* -webkit-transform: rotate(180deg); */
 }
 .ventilation-block .dht11 {
   width: 25%;
@@ -575,15 +586,19 @@
 }
 .ventilation-block .dht11-1 {
   top: -546%;
-  left: -205%;
+  left: -225%;
+  height: 80%;
+  width: 80%;
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
 }
 .ventilation-block .dht11-2 {
-  top: 24%;
-  left: -14%;
-  width: 43%;
-  height: 42%;
-  transform: rotate(90deg);
-  -webkit-transform: rotate(90deg);
+  top: -180%;
+  left: 50%;
+  width: 88%;
+  height: 82%;
+  transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
 }
 
 /* door s90 pir */
@@ -596,21 +611,21 @@
 .door-s90-pir2-block .door {
   width: 60%;
   height: 80%;
-  float: left;
+  /* float: left; */
 }
 .door-s90-pir2-block .sg90-servo {
-  width: 10%;
-  height: 100%;
-  float: left;
-  top: -110%;
-  left: -10%;
+  width: 30%;
+  height: 330%;
+  /* float: left; */
+  top: -530%;
+  left: -15%;
 }
 .door-s90-pir2-block .pir {
-  width: 20%;
-  height: 100%;
-  top: -300%;
-  left: 10%;
-  float: left;
+  width: 30%;
+  height: 150%;
+  top: -400%;
+  left: 60%;
+  /* float: left; */
 
   transform: rotate(-90deg);
   -webkit-transform: rotate(-90deg);
@@ -640,18 +655,18 @@
   height: 4%;
 }
 .servo-rfid-block .sg90-servo {
-  top: 61%;
-  left: 64%;
-  height: 54%;
-  width: 76%;
-  transform: rotate(-90deg);
-  -webkit-transform: rotate(-90deg);
+  top: -240%;
+  left: 250%;
+  height: 140%;
+  width: 250%;
+  transform: rotate(100deg);
+  -webkit-transform: rotate(100deg);
 }
 .rfid-rc522 {
-  height: 30%;
+  height: 300%;
   left: 30%;
-  width: 111%;
-  top: 30%;
+  width: 250%;
+  top: -60%;
 }
 
 /* window servo pir block */
@@ -665,21 +680,27 @@
 }
 .window-servo-pir-block .window {
   height: 75%;
-  width: 51%;
-  float: left;
+  width: 60%;
+  left: 20%;
+  top: -160%;
+  /* float: left; */
 }
 .window-servo-pir-block .sg90-servo {
-  height: 133%;
-  width: 13%;
+  height: 400%;
+  width: 30%;
   /* float: left; */
-  left: 21%;
-  top: 153%;
+  left: 70%;
+  top: -200%;
+
+  transform: rotate(150deg);
+  /* -webkit-transform: rotate(-90deg); */
 }
 .window-servo-pir-block .pir {
-  height: 100%;
-  width: 20%;
-  float: left;
+  height: 160%;
+  width: 30%;
+  /* float: left; */
   top: 49%;
+  left: -10%;
 
   transform: rotate(180deg);
   -webkit-transform: rotate(180deg);
@@ -703,32 +724,34 @@
   left: 65%;
 }
 .garage-input-block .sg90-servo {
-  width: 19%;
-  height: 45%;
-  float: left;
-  top: 50%;
-  left: 144%;
+  width: 50%;
+  height: 150%;
+  /* float: left; */
+  top: -150%;
+  left: 124%;
+  transform: rotate(150deg);
+  -webkit-transform: rotate(150deg);
 }
 .garage-input-block .garage-door {
-  float: left;
+  /* float: left; */
   width: 160%;
-  left: -22%;
+  left: -10%;
   height: 55%;
-  top: 13%;
+  top: -150%;
 }
 .garage-input-block .laser-receiver {
-  float: left;
-  width: 20%;
-  height: 15%;
+  /* float: left; */
+  width: 70%;
+  height: 85%;
   left: 130%;
-  top: 50%;
+  top: -100%;
 }
 .garage-input-block .laser {
-  float: left;
-  width: 20%;
-  height: 15%;
-  left: -60%;
-  top: 50%;
+  /* float: left; */
+  width: 60%;
+  height: 85%;
+  left: -70%;
+  top: -20%;
 }
 
 /* main door sg90 */
@@ -740,15 +763,15 @@
 }
 .main-door-servo-block .door {
   width: 118%;
-  top: 9%;
+  top: -230%;
   height: 60%;
 }
 .main-door-servo-block .sg90-servo {
-  width: 20%;
-  top: -20%;
+  width: 50%;
+  top: -200%;
   left: -10%;
   margin-right: 1%;
-  height: 120%;
+  height: 350%;
   /* float: left; */
 }
 
@@ -795,7 +818,7 @@
 .solar-panel-amperage,
 .solar-panel-voltage {
   height: 25%;
-  width: 60%;
+  width: 70%;
   z-index: 10;
   top: 0%;
   left: 40%;
