--- a/style.css
+++ b/style.css
@@ -395,13 +395,13 @@
 .air-pipe:before {
   width: 100%;
   height: 100%;
-  background: url("images/scheme_images/air-pipe.jpg");
+  background: url("images/scheme_images/air-pipe.png");
   background-size: 100% 100%;
 }
 .ventilation-recuperaptor {
   /* background: rgb(167, 145, 145); */
 }
-.ventilation-recuperaptor:before{
+.ventilation-recuperaptor:before {
   width: 100%;
   height: 100%;
   background: url("images/scheme_images/recuperator.png");
@@ -526,15 +526,15 @@
   height: 10%;
 }
 .air-pipe {
-  height: 25%;
+  height: 35%;
 }
 .ventilation-recuperaptor {
   width: 156%;
-  height: 54%;
-  top: -483%;
-  left: -180%;
+  height: 84%;
+  top: -495%;
+  left: -175%;
   z-index: 10;
-  transform: rotate(-5deg);
+  transform: rotate(-8deg);
   /* -webkit-transform: rotate(-10deg); */
 }
 /* .air-pipe-1{
@@ -549,14 +549,14 @@
   -webkit-transform: rotate(-90deg);
 }
 .air-pipe-2 {
-  top: -240%;
+  top: -270%;
   left: -235%;
   width: 370%;
 }
 .air-pipe-3 {
   width: 284%;
   left: -58%;
-  top: 10%;
+  top: -30%;
 }
 .air-pipe-4 {
   width: 130%;
@@ -574,8 +574,8 @@
 .peltye {
   width: 80%;
   height: 130%;
-  top: -690%;
-  left: -250%;
+  top: -730%;
+  left: -240%;
   z-index: 0;
   transform: rotate(-33deg);
   /* -webkit-transform: rotate(180deg); */
@@ -593,7 +593,7 @@
   -webkit-transform: rotate(180deg);
 }
 .ventilation-block .dht11-2 {
-  top: -180%;
+  top: -220%;
   left: 50%;
   width: 88%;
   height: 82%;
@@ -834,7 +834,7 @@
 }
 .sun-light {
   width: 280%;
-  height: 3%;
+  height: 4%;
   transform: rotate(-90deg);
   -webkit-transform: rotate(-90deg);
   top: -65%;
