--- a/style.css
+++ b/style.css
@@ -283,12 +283,12 @@
 }
 
 .solar-panel {
-  background: black;
+  /* background: black; */
 }
 .solar-panel:before {
   width: 100%;
   height: 100%;
-  background: black url("images/scheme_images/solar-panel.png");
+  background: url("images/scheme_images/solar-panel.png");
   background-size: 160% 100%;
   background-position: 50%;
 }
@@ -919,10 +919,15 @@
   left: 89%;
 }
 
-/*language buttons*/
-.language-block {
-  top: -160%;
-  left: 46%;
-  height: 4%;
-  width: 7%;
+.highlit-item {
+  opacity: 0.6;
+}
+
+.mark-items {
+  opacity: 0.6;
+  background: #428bca;
+}
+.mark-items:before {
+  /* opacity: 0.3; */
+  background: #428bca;
 }
