--- a/style.css
+++ b/style.css
@@ -487,7 +487,7 @@
 
 /* lights block */
 .lights-block {
-  top: -139%;
+  top: -138%;
   left: 30%;
   width: 10%;
   height: 10%;
@@ -528,7 +528,7 @@
 /* ventilation */
 .ventilation-block {
   z-index: 0;
-  top: -148.5%;
+  top: -147%;
   left: 40.8%;
   width: 10%;
   height: 10%;
@@ -641,17 +641,17 @@
 
 /* out of house */
 .reley {
-  top: -163%;
-  left: 85%;
-  width: 10%;
-  height: 10%;
-  /* transform: rotate(-70deg);
-  -webkit-transform: rotate(-70deg); */
+  top: -160%;
+  left: 9%;
+  width: 9%;
+  height: 9%;
+  transform: rotate(70deg);
+  -webkit-transform: rotate(70deg);
 }
 .mg135-air {
   width: 10%;
   height: 8%;
-  top: -168%;
+  top: -174%;
   left: 85%;
 }
 
@@ -726,7 +726,7 @@
 
 /* garage door block */
 .garage-input-block {
-  top: -173.9%;
+  top: -172.9%;
   width: 10%;
   height: 6%;
   left: 65%;
@@ -862,7 +862,7 @@
   width: 8%;
   height: 8%;
   left: 3%;
-  top: -36%;
+  top: -35%;
 }
 
 /* raspbery block */
@@ -895,31 +895,31 @@
   height: 11%;
 }
 .arduino-nano-rs485-block-1 {
-  top: 5%;
-  left: 3%;
+  top: 12%;
+  left: 1%;
 }
 .arduino-nano-rs485-block-2 {
-  top: 8%;
+  top: 15%;
   left: 3%;
 }
 .arduino-nano-rs485-block-3 {
-  top: 12%;
-  left: 3%;
-}
-.arduino-nano-rs485-block-4 {
   top: 18%;
   left: 3%;
 }
+.arduino-nano-rs485-block-4 {
+  top: 21%;
+  left: 3%;
+}
 .arduino-nano-rs485-block-5 {
-  top: -20%;
+  top: -25%;
   left: 86%;
 }
 .arduino-nano-rs485-block-6 {
-  top: -15%;
+  top: -18%;
   left: 86%;
 }
 .arduino-nano-rs485-block-7 {
-  top: -10%;
+  top: -12%;
   left: 86%;
 }
 .arduino-nano-rs485-block-8 {
