--- a/style.css
+++ b/style.css
@@ -487,7 +487,7 @@
 
 /* lights block */
 .lights-block {
-  top: -138%;
+  top: -139%;
   left: 30%;
   width: 10%;
   height: 10%;
@@ -528,7 +528,7 @@
 /* ventilation */
 .ventilation-block {
   z-index: 0;
-  top: -147%;
+  top: -148.5%;
   left: 40.8%;
   width: 10%;
   height: 10%;
@@ -641,18 +641,18 @@
 
 /* out of house */
 .reley {
-  top: -160%;
-  left: 9%;
-  width: 9%;
-  height: 9%;
-  transform: rotate(70deg);
-  -webkit-transform: rotate(70deg);
+  top: -153%;
+  left: 23%;
+  width: 10%;
+  height: 10%;
+  /* transform: rotate(-70deg);
+  -webkit-transform: rotate(-70deg); */
 }
 .mg135-air {
   width: 10%;
   height: 8%;
-  top: -174%;
-  left: 85%;
+  top: -103%;
+  left: 87%;
 }
 
 /* servo rfid block */
@@ -726,7 +726,7 @@
 
 /* garage door block */
 .garage-input-block {
-  top: -172.9%;
+  top: -173.9%;
   width: 10%;
   height: 6%;
   left: 65%;
@@ -862,7 +862,7 @@
   width: 8%;
   height: 8%;
   left: 3%;
-  top: -35%;
+  top: -36%;
 }
 
 /* raspbery block */
@@ -895,35 +895,35 @@
   height: 11%;
 }
 .arduino-nano-rs485-block-1 {
-  top: 12%;
-  left: 1%;
+  top: 5%;
+  left: 3%;
 }
 .arduino-nano-rs485-block-2 {
-  top: 15%;
+  top: 8%;
   left: 3%;
 }
 .arduino-nano-rs485-block-3 {
-  top: 18%;
+  top: 12%;
   left: 3%;
 }
 .arduino-nano-rs485-block-4 {
-  top: 21%;
+  top: 18%;
   left: 3%;
 }
 .arduino-nano-rs485-block-5 {
-  top: -25%;
+  top: -40%;
   left: 86%;
 }
 .arduino-nano-rs485-block-6 {
-  top: -18%;
+  top: -33%;
   left: 86%;
 }
 .arduino-nano-rs485-block-7 {
-  top: -12%;
+  top: -23%;
   left: 86%;
 }
 .arduino-nano-rs485-block-8 {
-  top: -5%;
+  top: -15%;
   left: 86%;
 }
 
